Fix: Use a better approach to make the gaps between li
Remark
- I'm speechless why I did it like that before

--- a/src/styles.css
+++ b/src/styles.css
@@ -61,10 +61,6 @@ header a {
     height: 1lh;
 }
 
-li:not(:first-child) {
-    margin-top: 1ch;
-}
-
 .list-edit {
     padding: 1ch;
     background-color: white;
